2014-01-21  David Farler  <dfarler@apple.com>

        Upstream package-root for iOS

        Reviewed by Daniel bates.

        * Scripts/package-root: Added.
        (usage):
        * Scripts/webkitdirs.pm:
        (XcodeSDKPath): Added function.

2014-01-21  Daniel Bates  <dabates@apple.com>

        [iOS] Tools/Makefile shouldn't build modules DumpRenderTree, gtest, or TestWebKitAPI
        https://bugs.webkit.org/show_bug.cgi?id=127368

        Reviewed by Tim Horton.

        Similar to the build-webkit change in <https://bugs.webkit.org/show_bug.cgi?id=127364>,
        we don't want to build DumpRenderTree, gtest, or TestWebKitAPI when running make in
        Tools.

        * Makefile:

2014-01-21  Daniel Bates  <dabates@apple.com>

        [iOS] Don't build DumpRenderTree, gtest, or TestWebKitAPI
        https://bugs.webkit.org/show_bug.cgi?id=127364

        Reviewed by Simon Fraser.

        For now, don't build DumpRenderTree and TestWebKitAPI for iOS as these
        projects fail to build because we need to upstream the relevant iOS changes.
        Also, don't build gtest, which is a dependency of TestWebKitAPI since we
        aren't building TestWebKitAPI.

        * Scripts/build-webkit:

2014-01-21  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        Unreviewed, remove myself from some watchlist entries.

        * Scripts/webkitpy/common/config/watchlist:

2014-01-21  Zalan Bujtas  <zalan@apple.com>

        Use 64 as the default value for the subpixel denominator.

        Reviewed by Simon Fraser.

        * lldb/lldb_webkit.py:
        (WebCoreLayoutUnitProvider.to_string):

2014-01-21  ChangSeok Oh  <changseok.oh@collabora.com>

        [GTK] Fix a c++11 compliance issue for fontconfig
        https://bugs.webkit.org/show_bug.cgi?id=127283

        Reviewed by Martin Robinson.

        fontconfig-2.8.0 is not compliant with C++11. So I propose to apply a
        hotfix until bumping fontconfig up.
