@@ -2855,6 +2855,14 @@
             "hta"
          ]
       },
+      "Ian Henderson" : {
+         "emails" : [
+            "ianh@apple.com"
+         ],
+         "nicks" : [
+            "ianh"
+         ]
+      },
       "Ian Hickson" : {
          "emails" : [
             "ian@hixie.ch"
@@ -3020,6 +3028,14 @@
          ],
          "nicks" : [
             "rhudea"
+         ]
+      },
+      "Ricky Mondello" : {
+         "emails" : [
+            "rmondello@apple.com"
+         ],
+         "nicks" : [
+            "rmondello"
          ]
       },
       "Tab Atkins" : {
